@@ -4,7 +4,7 @@
 # shared library version
 SO_MAJOR_VERSION=1
 SO_MINOR_VERSION=0
-SO_MICRO_VERSION=5CVS
+SO_MICRO_VERSION=5
 
 # sql scripts version
 SCRIPTS_VERSION=0.3.0
